src/objects/Lead/fields/Account_Match__c.field-meta.xml
<CustomField>
    <fullName>Account_Match__c</fullName>
    <formula>NOT(ISBLANK( Best_Matched_Account__c ))</formula>
    <label>Account Match</label>
    <type>Checkbox</type>
</CustomField>