src/objects/Lead/fields/Attempted_Same_Day__c.field-meta.xml
<CustomField>
    <fullName>Attempted_Same_Day__c</fullName>
    <formula>MQL_Date__c = Working_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attempted Same Day</label>
    <type>Checkbox</type>
</CustomField>