src/objects/Lead/fields/BDR_Notes__c.field-meta.xml
<CustomField>
    <fullName>BDR_Notes__c</fullName>
    <inlineHelpText>Notes about the lead from the BDR. These will carry over to the same field on the opportunity.</inlineHelpText>
    <label>BDR Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>