src/objects/Lead/fields/BDR_Signal__c.field-meta.xml
<CustomField>
    <fullName>BDR_Signal__c</fullName>
    <formula>IF(ISBLANK(Best_Matched_Account__c),null,Best_Matched_Account__r.BDR_Signal__c)</formula>
    <label>BDR Signal</label>
    <type>Text</type>
</CustomField>