src/objects/Lead/fields/Best_Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Best_Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account match based on email domain</inlineHelpText>
    <label>Best Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Best Matched Account)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>