src/objects/Lead/fields/Brand_Origin__c.field-meta.xml
<CustomField>
    <fullName>Brand_Origin__c</fullName>
    <label>Brand Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lobster Marketing</fullName>
            </value>
            <value>
                <fullName>PestRoutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>