src/objects/Lead/fields/Current_Marketing_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Marketing_Company__c</fullName>
    <description>Used by Lobster Marketing</description>
    <label>Current Marketing Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>