src/objects/Lead/fields/Days_to_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Attempt__c</fullName>
    <formula>Working_Date__c - MQL_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>