src/objects/Lead/fields/Days_to_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Qualified__c</fullName>
    <formula>IF(
ISBLANK(MQL_Date__c),
Qualified_Date__c -  Working_Date__c, 
Qualified_Date__c - MQL_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to  Qualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>