src/objects/Lead/fields/Days_to_Reached__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Reached__c</fullName>
    <formula>IF(
ISBLANK(MQL_Date__c), 
Reached_Date__c -  Working_Date__c, 
Reached_Date__c - MQL_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Reached</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>