src/objects/Lead/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <inlineHelpText>Why the company was disqualified as a lead. For example, not a pest control company or some we can actively sell to at this time.</inlineHelpText>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Number</fullName>
            </value>
            <value>
                <fullName>Company Not a Fit</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Fake Name</fullName>
            </value>
            <value>
                <fullName>Bad Geography</fullName>
                <label>International</label>
            </value>
            <value>
                <fullName>Not Pest Control</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>