src/objects/Lead/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lead does not wish to be contacted at this time.</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>