src/objects/Lead/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <formula>IF( 
Contains(Email, &quot;gmail&quot;)|| 
Contains(Email, &quot;yahoo&quot;)|| 
Contains (Email, &quot;hotmail&quot;)|| 
Contains (Email, &quot;aol&quot;) || 
Contains (Email, &quot;comcast&quot;) || 
Contains (Email, &quot;bellsouth&quot;) || 
Contains (Email, &quot;verizon&quot;) || 
Contains (Email, &quot;msn&quot;) || 
Contains (Email, &quot;rollins&quot;) || 
Contains (Email, &quot;att&quot;) || 
Contains (Email, &quot;cox&quot;) || 
Contains (Email, &quot;scbglobal&quot;) || 
Contains (Email, &quot;earthlink&quot;) || 
Contains (Email, &quot;icloud&quot;) || 
Contains (Email, &quot;optonline&quot;) || 
Contains (Email, &quot;ymail&quot;) || 
Contains (Email, &quot;charter&quot;) || 
Contains (Email, &quot;outlook&quot;), 
NULL, 
SUBSTITUTE(Email, LEFT(Email,FIND(&quot;@&quot;,Email)),NULL) 
)</formula>
    <inlineHelpText>Email domain of the lead</inlineHelpText>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>