src/objects/Lead/fields/email_status__c.field-meta.xml
<CustomField>
    <fullName>email_status__c</fullName>
    <description>Status from Never Bounce</description>
    <label>email_status</label>
    <length>155</length>
    <type>Text</type>
</CustomField>