src/objects/Lead/fields/first_conversion_event_name__c.field-meta.xml
<CustomField>
    <fullName>first_conversion_event_name__c</fullName>
    <label>First conversion</label>
    <length>150</length>
    <type>Text</type>
</CustomField>