src/objects/Lead/fields/Growth_Goals__c.field-meta.xml
<CustomField>
    <fullName>Growth_Goals__c</fullName>
    <description>Used by Lobster Marketing.</description>
    <label>Growth Goals</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>