src/objects/Lead/fields/hs_analytics_num_page_views__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_num_page_views__c</fullName>
    <label>Number of page views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>