src/objects/Lead/fields/hs_analytics_source__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_source__c</fullName>
    <description>The first known source through which a contact found your website. Source is automatically set by HubSpot.</description>
    <inlineHelpText>The first known source through which a contact found your website. Source is automatically set by HubSpot.</inlineHelpText>
    <label>Original Source</label>
    <length>155</length>
    <type>Text</type>
</CustomField>