src/objects/Lead/fields/hs_analytics_source_data_2__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_source_data_2__c</fullName>
    <description>Additional information about the source through which a contact first found your website. This property is automatically set by HubSpot.</description>
    <inlineHelpText>Additional information about the source through which a contact first found your website. This property is automatically set by HubSpot.</inlineHelpText>
    <label>Original source drill-down 2</label>
    <length>155</length>
    <type>Text</type>
</CustomField>