src/objects/Lead/fields/hs_email_open__c.field-meta.xml
<CustomField>
    <fullName>hs_email_open__c</fullName>
    <label>Marketing emails opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>