src/objects/Lead/fields/InfoUSA_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>InfoUSA_Revenue_Range__c</fullName>
    <label>InfoUSA Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less Than $500,000</fullName>
            </value>
            <value>
                <fullName>$500,000-$1 Million</fullName>
            </value>
            <value>
                <fullName>$1-2.5 Million</fullName>
            </value>
            <value>
                <fullName>$2.5-5 Million</fullName>
            </value>
            <value>
                <fullName>$5-10 Million</fullName>
            </value>
            <value>
                <fullName>$10-20 Million</fullName>
            </value>
            <value>
                <fullName>$20-50 Million</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>