src/objects/Lead/fields/IP_City__c.field-meta.xml
<CustomField>
    <fullName>IP_City__c</fullName>
    <label>IP City (HubSpot)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>