src/objects/Lead/fields/IP_Country__c.field-meta.xml
<CustomField>
    <fullName>IP_Country__c</fullName>
    <label>IP Country (HubSpot)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>