src/objects/Lead/fields/IP_State_Region__c.field-meta.xml
<CustomField>
    <fullName>IP_State_Region__c</fullName>
    <label>IP State/Region (HubSpot)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>