src/objects/Lead/fields/IsReached__c.field-meta.xml
<CustomField>
    <fullName>IsReached__c</fullName>
    <formula>NOT(
  ISBLANK(  Reached_Date__c  )
)</formula>
    <label>IsReached</label>
    <type>Checkbox</type>
</CustomField>