src/objects/Lead/fields/IsWorking__c.field-meta.xml
<CustomField>
    <fullName>IsWorking__c</fullName>
    <formula>NOT(
  ISBLANK(  Working_Date__c  )
)</formula>
    <label>IsWorking</label>
    <type>Checkbox</type>
</CustomField>