src/objects/Lead/fields/Last_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt_Date__c</fullName>
    <label>Last Attempt Date</label>
    <type>Date</type>
</CustomField>