src/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Lobster Lead</fullName>
            </value>
            <value>
                <fullName>New Lobster Lead with existing PestRoutes Customer</fullName>
            </value>
            <value>
                <fullName>New PestRoutes Lead</fullName>
            </value>
            <value>
                <fullName>New PestRoutes Lead with existing Lobster Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>