src/objects/Lead/fields/Major_Metro_City__c.field-meta.xml
<CustomField>
    <fullName>Major_Metro_City__c</fullName>
    <inlineHelpText>May be different than the physical/business address.</inlineHelpText>
    <label>Major Metro City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>