src/objects/Lead/fields/Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Budget__c</fullName>
    <description>Used by Lobster Marketing.</description>
    <label>Marketing Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>