src/objects/Lead/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <inlineHelpText>Date of the first demo</inlineHelpText>
    <label>Demo Date</label>
    <type>Date</type>
</CustomField>