src/objects/Lead/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Member</fullName>
            </value>
            <value>
                <fullName>Advanced Member</fullName>
            </value>
            <value>
                <fullName>Premium Member</fullName>
            </value>
            <value>
                <fullName>Non-member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>