src/objects/Lead/fields/Missed_SLA__c.field-meta.xml
<CustomField>
    <fullName>Missed_SLA__c</fullName>
    <description>Checked if any of the following are true: 
- Lead Status is MQL and Activity Count &lt;1 
- Lead Status is Working and Last Activity is &gt; 16 days ago 
- Lead Status is Reached and Last Connect Date is &gt; 30 days ago</description>
    <formula>IF(
(ISPICKVAL(Status, &quot;MQL&quot;) &amp;&amp; Number_of_Attempts__c &lt;1) ||
(ISPICKVAL(Status, &quot;Working&quot;) &amp;&amp;
Last_Attempt_Date__c + 16 &lt; today()) ||
(ISPICKVAL(Status, &quot;Reached&quot;) &amp;&amp;
Last_Connect_Date__c + 30 &lt; today()),
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if any of the following are true: 
- Lead Status is MQL and Activity Count &lt;1 
- Lead Status is Working and Last Activity is &gt; 16 days ago 
- Lead Status is Reached and Last Connect Date is &gt; 30 days ago</inlineHelpText>
    <label>Missed SLA?</label>
    <type>Checkbox</type>
</CustomField>