src/objects/Lead/fields/Most_Recent_Cadence_ID_SalesLoft__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cadence_ID_SalesLoft__c</fullName>
    <label>Most Recent Cadence ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>