src/objects/Lead/fields/Most_Recent_Cadence_Last_Completed_Ste__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cadence_Last_Completed_Ste__c</fullName>
    <label>Most Recent Cadence - Last Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>