src/objects/Lead/fields/Most_Recent_Cadence_Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cadence_Next_Due_Date__c</fullName>
    <label>Most Recent Cadence - Next Due Date</label>
    <type>Date</type>
</CustomField>