src/objects/Lead/fields/num_conversion_events__c.field-meta.xml
<CustomField>
    <fullName>num_conversion_events__c</fullName>
    <label>Number of form submissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>