src/objects/Lead/fields/Nurture_Reason__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Reason__c</fullName>
    <inlineHelpText>Why the AE had to send back to BDR or Marketing.</inlineHelpText>
    <label>Nurture Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Gatekeeper</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>No immediate interest/need</fullName>
            </value>
            <value>
                <fullName>Product Feature Gap</fullName>
            </value>
            <value>
                <fullName>Referred to Other Contact</fullName>
            </value>
            <value>
                <fullName>Using Competitor</fullName>
            </value>
            <value>
                <fullName>Went Dark</fullName>
            </value>
            <value>
                <fullName>Went Dark - Priority Follow Up</fullName>
            </value>
            <value>
                <fullName>Unknown - Data Migration</fullName>
                <isActive>false</isActive>
                <label>Unknown - Data Migration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>