src/objects/Lead/fields/of_Services_Mo__c.field-meta.xml
<CustomField>
    <fullName>of_Services_Mo__c</fullName>
    <label># of Services/Mo.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>