src/objects/Lead/fields/of_Technicians__c.field-meta.xml
<CustomField>
    <fullName>of_Technicians__c</fullName>
    <inlineHelpText>How many technicians do they have on staff?</inlineHelpText>
    <label># of Technicians</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>