src/objects/Lead/fields/Original_source_drill_down_1__c.field-meta.xml
<CustomField>
    <fullName>Original_source_drill_down_1__c</fullName>
    <description>Additional information about the source through which a contact first found your website. This property is automatically set by HubSpot.</description>
    <inlineHelpText>Additional information about the source through which a contact first found your website. This property is automatically set by HubSpot.</inlineHelpText>
    <label>Original source drill-down 1</label>
    <length>155</length>
    <type>Text</type>
</CustomField>