src/objects/Lead/fields/Other_note_reason__c.field-meta.xml
<CustomField>
    <fullName>Other_note_reason__c</fullName>
    <description>Used by Lobster Marketing. This is a dependent field on the &quot;Reason for Choosing Lobster&quot; picklist.</description>
    <label>Other - note reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>