src/objects/Lead/fields/PestWorld2018__c.field-meta.xml
<CustomField>
    <fullName>PestWorld2018__c</fullName>
    <label>PestWorld2018</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met at Booth</fullName>
            </value>
            <value>
                <fullName>Demo Set</fullName>
            </value>
            <value>
                <fullName>Demo Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>