src/objects/Lead/fields/Primary_Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Location__c</fullName>
    <label>Primary Service Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>