src/objects/Lead/fields/Purchase_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Timeframe__c</fullName>
    <inlineHelpText>Approximate date that a prospect is looking to make a purchase.</inlineHelpText>
    <label>Purchase Timeframe</label>
    <type>Date</type>
</CustomField>