src/objects/Lead/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead Status is Qualified</description>
    <label>Qualified</label>
    <type>Checkbox</type>
</CustomField>