src/objects/Lead/fields/Reached_Date__c.field-meta.xml
<CustomField>
    <fullName>Reached_Date__c</fullName>
    <label>Reached Date</label>
    <type>Date</type>
</CustomField>