src/objects/Lead/fields/Ready_to_Pass__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Pass__c</fullName>
    <formula>IF(AND(Number_of_Customers__c &gt; 0 ,  Number_of_Locations__c &gt; 0,  of_Technicians__c &gt;0), IMAGE(&quot;/logos/Custom/Handshake_Green/logo.png&quot;,&quot;Green&quot;,15,15), IMAGE(&quot;/logos/Custom/Triangle_Yellow/logo.png&quot;,&quot;Yellow&quot;,15,15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Technicians &gt;0
Number of Customers &gt;0
Number of Locations &gt; 0</inlineHelpText>
    <label>Ready to Pass</label>
    <type>Text</type>
</CustomField>