src/objects/Lead/fields/Reason_for_Choosing_Lobster__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Choosing_Lobster__c</fullName>
    <description>Used by Lobster Marketing</description>
    <label>Reason for Choosing Lobster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pest Control Expertise</fullName>
            </value>
            <value>
                <fullName>Site Integrations</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>