src/objects/Lead/fields/Referrer_s_Company__c.field-meta.xml
<CustomField>
    <fullName>Referrer_s_Company__c</fullName>
    <label>Referrer&#39;s Company</label>
    <length>140</length>
    <type>Text</type>
</CustomField>