src/objects/Lead/fields/Referrer_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_s_Email__c</fullName>
    <label>Referrer&#39;s Email</label>
    <type>Email</type>
</CustomField>