src/objects/Lead/fields/Referrer_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referrer_s_Phone__c</fullName>
    <label>Referrer&#39;s Phone</label>
    <type>Phone</type>
</CustomField>